created README and executable .jar files